--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "feed": "^4.2.2",
     "feedparser": "^2.2.10",
+    "http-errors": "^2.0.0",
     "jest": "^29.7.0",
     "js2xmlparser": "^5.0.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
